welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: type mismatch;
 found   : Int
 required: String
		setCouleurBrosse(T(k)+decalage)
                                      ^